2009-05-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for mac build.

	* distro-details.pl:
	Politically correct vendor name spelling.
	Fix version regexp.

	* external/DevIL/DevIL.pl:
	Do not build ILUT - has problems with GL.

	* external/fltk/fltk.pl:
	Do not use xft. Configure wih enable-quartz.

	* external/root/root.pl:
	Enforce 32-bit build - all other software (and whatever comes from
	fink) is built in 32-bit mode, too.

2009-04-26  Matevz Tadel  <matevz.tadel@ijs.si>

	Use latest OpenAL.

	* GledBuildExternal.pm:
	Add optional argument pre-command to
	use_defaults_for_remaining_targets(). This makes it easier to
	specify targets that require stuff like "cd build-dir" or
	". build.env" to be executed.

	* external/openal/openal.pl:
	Modify to build the latest OpenAL which uses CMake.

2009-04-25  Matevz Tadel  <matevz.tadel@ijs.si>

	First step towards darwin build; minor fix of fltk-mt.

	* distro-details.pl:
	Add preliminary support for darwin.

	* external/fltk-mt/fltk-mt.pl:
	No need tp pass '--ucxx=-fPIC' to configure - proper cxx-flags are
	obtained from flt-config.

2009-03-31  Matevz Tadel  <matevz.tadel@ijs.si>

	Changes for proper propagation of build params into gled-build.

	* GledBuildConf.pm.in:
	* MakeBuildConf.inc.in:
	* configure.ac:
	Add new configuration variables allowing full control over what
	SVN version of Gled and what external software is used:
	  CACHE_TAG  tag for external software;
	  SVN_BASE   SVN base URL;
	  SVN_DIR    SVN directory;
	  SVN_REV    SVN revison;
	  SVN_USER   SVN username.

	* gled/Makefile:
	Pass the new configuration variables to gled-build-checkout and to
	configure.

	* configure-branch.sh:
	* configure-tag.sh:
	New scripts - helpers for configuring tag / branch builds.

2009-03-30  Matevz Tadel  <matevz.tadel@ijs.si>

	Improve management of external-package cache.

	* GledBuildExternal.pm:
	Add functions for cache handling and interaction.
	Use them also when setting up and downloading a package.
